--- a/scss/main.css
+++ b/scss/main.css
@@ -29,6 +29,173 @@
   margin: 5px;
 }
 
+/* Header de todas las paginas */
+/* Estilo para el head(incluye logo, bienvenida, buscador, sesion y carrito, menu y cuotas) */
+#cabezal .containercabezal {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0px;
+  border-bottom: 1px solid #dedede;
+  background-color: rgba(22, 196, 88, 0.4);
+}
+#cabezal .containercabezal .logohead {
+  display: flex;
+  justify-content: center;
+  width: 30%;
+  height: 100%;
+}
+#cabezal .containercabezal .logohead a img {
+  width: 100px;
+  height: 100px;
+  padding-right: 20%;
+}
+#cabezal .containercabezal .logohead:hover {
+  cursor: pointer;
+}
+#cabezal .containercabezal .presearch {
+  display: block;
+  width: 40%;
+}
+#cabezal .containercabezal .presearch .presentation h1 {
+  text-align: start;
+  /* font-size: 1.4rem; */
+  font-size: clamp(0.6rem, 1vw, 1.5rem);
+  word-wrap: break-word;
+}
+#cabezal .containercabezal .presearch .buscador {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 10px;
+}
+#cabezal .containercabezal .presearch .buscador input {
+  width: 70%;
+  height: 35px;
+  border-radius: 5px;
+  padding: 8px;
+}
+#cabezal .containercabezal .presearch .buscador button {
+  width: 11%;
+  border-radius: 5px;
+  background-color: rgba(71, 6, 150, 0.5960784314);
+  color: #fff;
+}
+#cabezal .containercabezal .presearch .buscador button i:hover {
+  color: black;
+}
+#cabezal .containercabezal .sesioncarro {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  gap: 10px;
+}
+#cabezal .containercabezal .sesioncarro .seca {
+  overflow: hidden;
+  width: 45%;
+  height: 2rem;
+  border-radius: 10px;
+  background-color: rgba(71, 6, 150, 0.5960784314);
+  border: none;
+}
+#cabezal .containercabezal .sesioncarro .seca a {
+  text-decoration: none;
+  color: black;
+}
+#cabezal .containercabezal .sesioncarro .seca a span {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+#cabezal .containercabezal .sesioncarro .seca a:hover {
+  text-decoration: none;
+  color: white;
+  font-size: 100%;
+  transition: 0.1s;
+}
+#cabezal .containercabezal .sesioncarro .separadorseca {
+  font-size: 1.4rem;
+}
+#cabezal .containercabezal .sesioncarro .container-fluid .btncarro {
+  width: 45%;
+}
+#cabezal .containercabezal .sesioncarro .container-fluid .btncarro span {
+  font-size: 100%;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+#cabezal .containercabezal .sesioncarro .container-fluid .btncarro:hover {
+  text-decoration: none;
+  color: white;
+  font-size: 100%;
+  transition: 0.1s;
+}
+#cabezal .containercabezal .sesioncarro .container-fluid .modal .modal-dialog .modal-content .modal-body .table tbody tr td:last-child button i {
+  color: red;
+}
+#cabezal .containercabezal .sesioncarro .container-fluid .modal .modal-dialog .modal-content .modal-footer {
+  justify-content: center;
+  align-items: center;
+}
+#cabezal #menuopciones {
+  background-color: rgba(0, 0, 0, 0.11);
+}
+#cabezal #menuopciones .checkbtn {
+  cursor: pointer;
+  display: none;
+}
+#cabezal #menuopciones ul {
+  display: inline-flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  list-style: none;
+  width: 100%;
+  padding: 0;
+}
+#cabezal #menuopciones ul li {
+  width: 12.5%;
+  padding-top: 1%;
+  text-align: center;
+}
+#cabezal #menuopciones ul li a {
+  font-size: 75%;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #4a3866;
+  transition: all 0.3s;
+}
+#cabezal #menuopciones ul li a:hover {
+  color: #470696;
+  font-family: italic;
+  transition: all 0.1s;
+}
+#cabezal #menuopciones ul li i {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+#cabezal #menuopciones ul li:hover {
+  border-bottom: 3px solid #470696;
+  color: #470696;
+  font-style: italic;
+  font-size: large;
+  transition: all 0.1s;
+}
+#cabezal .cuotas {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+#cabezal .cuotas a {
+  display: block;
+}
+#cabezal .cuotas a img {
+  width: 100%;
+  height: 3rem;
+}
+#cabezal .cuotas a:nth-child(2) {
+  display: none;
+}
+
 /* Index */
 /* Slider Index */
 #sliderpromo {
@@ -133,6 +300,412 @@
   height: 100%;
 }
 
+/* Sección de ofertas(ZG-COMPUTACIÓN-COMPONENTES) */
+.ofertasproduct {
+  width: 100%;
+  margin-top: 2rem;
+}
+.ofertasproduct .products {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
+  margin: auto;
+  margin-top: 1rem;
+  margin-bottom: 15px;
+  padding: 0;
+  gap: 1%;
+}
+.ofertasproduct .products .product {
+  list-style: none;
+  width: 15%;
+  height: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.ofertasproduct .products .product .productinfo {
+  color: #333;
+  text-decoration: none;
+}
+.ofertasproduct .products .product .productinfo .producttrademark {
+  margin-bottom: 0.5rem;
+}
+.ofertasproduct .products .product .productinfo .productname {
+  width: 100%;
+  height: auto;
+}
+.ofertasproduct .products .product .productinfo .productname p {
+  width: 100%;
+  height: 2.8rem;
+  overflow: hidden;
+}
+.ofertasproduct .products .product .productinfo .skuunits {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-size: 0.6rem;
+  margin-top: 0.5rem;
+  opacity: 0.8;
+}
+.ofertasproduct .products .product .productinfo .skuunits .productunits {
+  text-align: end;
+}
+.ofertasproduct .products .product .productinfo .skuunits .productunits span {
+  padding-right: 10%;
+}
+.ofertasproduct .products .product .productinfo .productimg {
+  text-align: center;
+}
+.ofertasproduct .products .product .productinfo .productimg img {
+  width: 95%;
+  height: auto;
+}
+.ofertasproduct .products .product .valuecart {
+  display: flex;
+  justify-content: space-between;
+}
+.ofertasproduct .products .product .valuecart .value {
+  padding-left: 5%;
+  color: #333;
+  text-decoration: none;
+}
+.ofertasproduct .products .product .valuecart .cartplus {
+  padding-right: 10%;
+  color: #333;
+}
+.ofertasproduct .products .product .valuecart .cartplus i {
+  font-size: 2rem;
+  height: 2.1rem;
+}
+.ofertasproduct .products .product:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s;
+  width: 15.5%;
+}
+
+/*  */
+/* CSS generico de Login - recoveraccount - changepassword - contact - registeruser */
+#formcontainer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.08);
+}
+#formcontainer #sectionform {
+  background-color: #ffffff;
+  padding: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  text-align: center;
+  width: 45%;
+  height: auto;
+}
+#formcontainer #sectionform .nameform {
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+#formcontainer #sectionform .nameform h2 {
+  color: #333;
+  text-align: center;
+  font-weight: bold;
+}
+#formcontainer #sectionform .formulario {
+  margin-top: 35px;
+}
+#formcontainer #sectionform .formulario div {
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#formcontainer #sectionform .formulario div input {
+  width: 85%;
+  margin-top: 15px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+#formcontainer #sectionform .formulario div button {
+  background-color: #470696;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 40%;
+}
+#formcontainer #sectionform .ayuda div {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+#formcontainer #sectionform .ayuda div span {
+  display: block;
+  margin-bottom: 5px;
+}
+#formcontainer #sectionform .ayuda div a {
+  color: #007bff;
+  padding-left: 5px;
+}
+
+/*  */
+/* Style for recoveryaccount */
+/* Sección para recuperar cuenta */
+#formcontainer #sectionform .secciones {
+  margin-top: 25px;
+}
+#formcontainer #sectionform .secciones .formrecover {
+  margin-top: 15px;
+}
+#formcontainer #sectionform .secciones .formrecover input {
+  width: 85%;
+  height: auto;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+#formcontainer #sectionform .secciones .formrecover button {
+  background-color: #470696;
+  color: #fff;
+  width: 85%;
+  height: 2.5rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#formcontainer #sectionform .returnlogin {
+  text-align: start;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 100%;
+  text-align: start;
+}
+
+/*  */
+/* Style for contact */
+/* Sección para llenar formulario de contacto */
+#formcontainer #sectionform .formcontact {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, auto);
+  gap: 15px;
+}
+#formcontainer #sectionform .formcontact .formdata {
+  grid-column: span 1;
+}
+#formcontainer #sectionform .formcontact .formdata label {
+  text-align: start;
+  font-weight: bold;
+  color: #555;
+}
+#formcontainer #sectionform .formcontact .formdata input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+#formcontainer #sectionform .formcontact .formdata #motivo {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+#formcontainer #sectionform .formcontact .textareaform {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 6;
+}
+#formcontainer #sectionform .formcontact .textareaform #comentarios {
+  background-color: #f0f0f0;
+  resize: none;
+  width: 100%;
+  height: 15rem;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+#formcontainer #sectionform .formcontact .senddata {
+  grid-column: span 2;
+  width: 100%;
+  height: auto;
+}
+#formcontainer #sectionform .formcontact .senddata button {
+  background-color: #470696;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 40%;
+}
+
+/*  */
+/* Style for registeruser */
+/* Sección para llenar formulario del registro de usuario */
+#formcontainer #sectionformreguser {
+  background-color: #ffffff;
+  padding: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  text-align: center;
+  width: 70%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2 auto);
+  justify-content: center;
+  align-items: center;
+}
+#formcontainer #sectionformreguser .formreguser {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3 auto);
+  width: 100%;
+  gap: 1%;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdataone {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+#formcontainer #sectionformreguser .formreguser .reguserdataone h3 {
+  font-weight: bold;
+  margin: 25px;
+  height: 4rem;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdataone div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdataone div label {
+  height: 2rem;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdataone div input {
+  width: 85%;
+  margin-top: 5px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatatwo {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatatwo h3 {
+  font-weight: bold;
+  margin: 25px;
+  height: 4rem;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatatwo div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatatwo div label {
+  height: 2rem;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatatwo div input {
+  width: 85%;
+  margin-top: 5px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatathree {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatathree h3 {
+  font-weight: bold;
+  margin: 25px;
+  height: 4rem;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatathree div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatathree div label {
+  height: 2rem;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatathree div input {
+  width: 85%;
+  margin-top: 5px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatafour {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  width: 100%;
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatafour button {
+  background-color: #470696;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 40%;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+#formcontainer #sectionformreguser .formreguser .reguserdatafour .returnlogin {
+  width: 100%;
+  text-align: start;
+}
+
 /* Footer de todas las paginas */
 /* Estilo para el footer(incluye logo con contacto, servicios e información de la empresa) */
 #piepagina {
@@ -144,7 +717,6 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   width: 100%;
   height: auto;
-  margin-top: 25px;
 }
 #piepagina .pie {
   margin-top: 25px;
